<resources>
    <string name="app_name">FortniteTracker</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="fortnite_font_resource">fonts/fortnite.ttf</string>
    <string name="zero_slash">0/ %1$1s</string>


    <!--Tabs-->
    <string name="tab_text_1">News</string>
    <string name="tab_text_2">Tracker</string>
    <string name="tab_text_3">Store</string>
    <string name="tab_text_4">Challenges</string>

    <!--FAB-->
    <string name="fab_content_description_portrait">Challenge weekly FAB menu Portrait</string>
    <string name="fab_content_description_landscape">Challenge weekly FAB menu Landscape</string>
    <string name="sub_fab_content_description_week_1">Challenge week sub-FAB menu for week 1</string>
    <string name="sub_fab_content_description_week_2">Challenge week sub-FAB menu for week 2</string>
    <string name="sub_fab_content_description_week_3">Challenge week sub-FAB menu for week 3</string>
    <string name="sub_fab_content_description_week_4">Challenge week sub-FAB menu for week 4</string>
    <string name="sub_fab_content_description_week_5">Challenge week sub-FAB menu for week 5</string>
    <string name="sub_fab_content_description_week_6">Challenge week sub-FAB menu for week 6</string>
    <string name="sub_fab_content_description_week_7">Challenge week sub-FAB menu for week 7</string>
    <string name="sub_fab_content_description_week_8">Challenge week sub-FAB menu for week 8</string>
    <string name="sub_fab_content_description_week_9">Challenge week sub-FAB menu for week 9</string>
    <string name="sub_fab_content_description_week_10">Challenge week sub-FAB menu for week 10</string>

    <!--Main Activity Layout-->
    <string name="fortnite_header">Fortnite</string>
    <string name="tracker_header">Tracker</string>

    <!--Challenge Adapter Layout-->
    <string name="number_of_stars_default">5</string>
    <string name="challenge_default">Show me the challenge</string>
    <string name="number_total_default">7/7</string>
    <string name="select_challenge">SELECT A CHALLENGE WEEK</string>
    <string name="select_challenge_landscape">SELECT A CHALLENGE WEEK</string>

    <!--Challenge Portrait and Landscape Layout-->
    <string name="week_1">Week 1</string>
    <string name="week_2">Week 2</string>
    <string name="week_3">Week 3</string>
    <string name="week_4">Week 4</string>
    <string name="week_5">Week 5</string>
    <string name="week_6">Week 6</string>
    <string name="week_7">Week 7</string>
    <string name="week_8">Week 8</string>
    <string name="week_9">Week 9</string>
    <string name="week_10">Week 10</string>

    <!--News Adapter Layout-->
    <string name="default_title">Title</string>
    <string name="default_body">Body</string>

    <!--News Layout-->
    <string name="news_header">Fortnite News</string>

    <!--Store Layout-->
    <string name="daily_store_header">Daily Store</string>
    <string name="epic_username">Epic Username</string>

    <!--Tracker Layout-->
    <string name="solo">SOLO</string>
    <string name="matches">Matches 0</string>
    <string name="score">Score</string>
    <string name="zero">0</string>
    <string name="kills">Kills</string>
    <string name="kills_match">Kills/Match</string>
    <string name="top_10_solo">Top 10</string>
    <string name="top_1">Top 1</string>
    <string name="top_25_solo">Top 25</string>
    <string name="duo">DUO</string>
    <string name="top_5_duo">Top 5</string>
    <string name="top_12_duo">Top 12</string>
    <string name="squad">SQUAD</string>
    <string name="top_3_squad">Top 3</string>
    <string name="top_6_squad">Top 6</string>

    <!--Content Descriptions-->
    <string name="small_battle_star">Small Battle Star</string>
    <string name="battle_star_background">Big Center Battle Star Background</string>
    <string name="battle_star_banner">Battle Star Banner</string>
    <string name="image_background_holder">Image Background Holder for Widget</string>
    <string name="image_background_holder_news">Image Background Holder</string>
    <string name="fortnite_logo">Fortnite Logo</string>

    <!--Toast-->

    <string name="toast_no_username">No Epic Username Found</string>
    <string name="toast_not_available"> is not available yet</string>


    <!--numbers-->
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_10">10</string>

    <!--API URLS-->
    <string name="api_key">rapidapi-key=1c10cbfcd7msh5e4421ba5337b7cp169105jsned1029083419</string>
    <string name="challenge_url">https://fortnite-public-api.theapinetwork.com/prod09/challenges/get?season=current</string>
    <string name="news_url">https://fortnite-api.p.rapidapi.com/brnews/en</string>
    <string name="store_url">https://fortnite-api.theapinetwork.com/store/get</string>
    <string name="tracker_id_url">https://fortnite-api.p.rapidapi.com/stats/</string>
    <string name="tracker_username_url">https://fortnite-public-api.theapinetwork.com/prod09/users/public/br_stats_v2?user_id=</string>


    <!--JSON requests keys-->

    <string name="entries">entries</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="image">tileImage</string>

    <string name="items">items</string>
    <string name="item">item</string>
    <string name="images">images</string>
    <string name="information">information</string>
    <string name="username">Username</string>

    <string name="uid">uid</string>

    <string name="data">data</string>
    <string name="keyboardmouse">keyboardmouse</string>

    <string name="defaultduo">defaultduo</string>
    <string name="default_string">default</string>
    <string name="placetop12">placetop12</string>
    <string name="placetop5">placetop5</string>
    <string name="placetop1">placetop1</string>
    <string name="lowercase_score">score</string>
    <string name="lowercase_matchesplayed">matchesplayed</string>
    <string name="lowercase_kills">kills</string>


    <string name="defaultsquad">defaultsquad</string>
    <string name="placetop6">placetop6</string>
    <string name="placetop3">placetop3</string>

    <string name="defaultsolo">defaultsolo</string>
    <string name="placetop25">placetop25</string>
    <string name="placetop10">placetop10</string>

    <string name="matches_tv">Matches %1$1d</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="edmt">EDMT_FIREBASE</string>
    <string name="enter_your_username">ENTER YOUR USERNAME</string>
    <string name="submit">Submit</string>
    <string name="toast_no_message_found">No Message Found</string>
    <string name="toast_enter_username">Please enter a Username and hit submit</string>
    <string name="toast_no_username_in_database">No username in database</string>
    <string name="toast_no_cursor_found">No Cursor Found</string>
    <string name="toast_unknown">Unknown URI</string>
    <string name="toast_row_insert_failed">Row Insert Failed</string>
    <string name="toast_unsupported_uri">Unsupported URI</string>
    <string name="week_challeges_banner">Week %1$1s Challenges</string>
    <string name="week">week</string>
    <string name="error">Error</string>
    <string name="lifetime">lifetime</string>
    <string name="all">all</string>
    <string name="subgameinfo">subgameinfo</string>
    <string name="battleroyalenews">battleroyalenews</string>
    <string name="news">news</string>
    <string name="motds">motds</string>
    <string name="creativenews">creativenews</string>


</resources>
