<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70000000"
    android:padding="@dimen/widget_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:text="@string/news_header"
        android:textSize="@dimen/news_text_size_body"
        android:textColor="@color/white"
        android:textStyle="bold|italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:elevation="@dimen/default_elevation">


            <TextView
                android:id="@+id/tv_news_title_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_title"
                android:textStyle="bold"
                android:textSize="@dimen/news_text_size_title"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tv_news_body_widget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/default_body"
                android:textSize="@dimen/news_text_size_body"
                android:textColor="@color/white"/>

        </LinearLayout>

    <ImageView
        android:contentDescription="@string/image_background_holder_news"
        android:layout_gravity="center"
        android:id="@+id/image_news_widget"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fortnite_star"
        android:cropToPadding="true"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        />

</FrameLayout>