<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context=".Activities.HomeActivity">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_4" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_message_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_messages"
        android:elevation="10dp"
        android:focusable="true"
        app:borderWidth="0dp" />

    <View
        android:id="@+id/message_background_tint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_tint_alpha_70"
        android:visibility="gone"
        app:layout_anchor="@+id/message_frame"
        app:layout_anchorGravity="bottom|center" />

    <FrameLayout
        android:id="@+id/message_username_entry_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="65dp"
        app:elevation = "10dp"
        android:background="@color/colorPrimary"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_username"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/enter_username"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/et_username_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/username_et_margin"
                android:layout_marginBottom="@dimen/username_et_margin"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btn_username_entry"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:background="@color/backgrounLight"
                android:text="@string/submit"
                android:layout_gravity="center" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/message_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="65dp"
        android:elevation="@dimen/message_elevation"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/message_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/default_padding_8"
                        android:elevation="@dimen/default_elevation"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/wukong"
                        android:scaleType="centerCrop"
                        android:alpha=".4"/>

            </RelativeLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="bottom"
                android:padding="@dimen/default_padding_8"
                android:background="@color/white">

                <EditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="45dp"
                    android:layout_marginRight="45dp"
                    android:hint="@string/enter_your_message"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <ImageView
                    android:id="@+id/message_send"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_messages_send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/message_edit_text" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </FrameLayout>


</android.support.design.widget.CoordinatorLayout>